# DErosatomTST

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3545efb4ede6_initial112.py
app/api/v1/endpoints/: flights.py
app/core/: config.py
app/data/: black_sea_flights.html  flights_20250409.csv
app/db/: session.py
app/db/models/: __init__.py  flight.py
app/services/: black_sea_flights_train.html  fl_srv_train.py  flightradar_services.py  flightradar_services2_train.py
